# WebAssembly-Webworker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.js  package-lock.json  package.json
src/cpp/: module.cpp  task.h  worker.h
src/html/: index.html
src/ts/: main.ts  worker-main.ts  worker-message.ts  worker.ts
src/ts/types/: module.d.ts
